@@ -1,5 +1,8 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - ensure worker exits, even if shm blocks
+
 1.4.6 Tue Jun  4 17:03:57 CEST 2013
           - kill complete process group on timeout
           - close open filehandles before running check
